--- a/github.html
+++ b/github.html
@@ -1,11 +1,1 @@
-<html>
-	<head></head>
-	
-	</body>
-		<p>Example text</p>
-
-<div>Added first div in addition to a  paragraph</div>
-	</body>
-         
-
-</html>
+Hahahahha
